custom2.css
/* ... */
.icon_group:hover > .icon:nth-child(10)
{
    transform: translate(200%, 50%);
    width:12vmin;
    font-size: 2.3vmin;
}
.icon_group:hover > .icon:nth-child(11)
{
    transform: translate(-50%, 150%);
    width:12vmin;
    font-size: 2.3vmin;
}
.icon_group:hover > .icon:nth-child(12)
{
    transform: translate(-300%, 250%);
    width:12vmin;
    font-size: 2.3vmin;
}
.icon_group:hover > .icon:nth-child(13)
{
    transform: translate(-200%, 250%);
    width:12vmin;
    font-size: 2.3vmin;
}
.icon_group:hover > .icon:nth-child(14)
{
    transform: translate(-100%, 250%);
    width:12vmin;
    font-size: 2.3vmin;
}
.icon_group:hover > .icon:nth-child(15)
{
    transform: translate(0%, 250%);
    width:12vmin;
    font-size: 2.3vmin;
}
.icon_group:hover > .icon:nth-child(16)
{
    transform: translate(150%, 250%);
    width:12vmin;
    font-size: 2.3vmin;
}
/*blank*/
.icon_group:hover > .icon:nth-child(17)
{
    background-color: rgba(0,0,0,0);
    color: rgba(0,0,0,0);
    transform: translate(-16%, -11%);
}
.icon_group:hover > .icon:nth-child(18)
{
    background-color: rgba(0,0,0,0);
    color: rgba(0,0,0,0);
    transform: translate(-84%, -11%);
}

.icon-class
{
    padding-top: 45vmin;
}
:root {
    --blue-rgb: 33 150 243;
    --primary-rgb: var(--blue-rgb);
    
    --blob-color-1: rgb(var(--blue-rgb));
    --blob-color-2: dodgerblue;
}
  
* {
box-sizing: border-box;
}
.screen {
left: 50%;
transform: translate(-50%, -11%);
width: 70%;
display: flex;
border: 3px solid rgb(var(--primary-rgb) / 80%);
aspect-ratio: 24 / 9;
border-radius: 1rem;
background-color: rgb(var(--primary-rgb) / 15%);
overflow: hidden;
position: relative;
z-index: 0;
}

.screen:after,
.screen:before {
content: "";
height: 5px;
position: absolute;
z-index: 4;
left: 50%;
translate: -50% 0%;
background-color: white;
}

.screen:before {
width: 15%;
top: 0rem;
border-bottom-left-radius: 1rem;
border-bottom-right-radius: 1rem;
}

.screen:after {
width: 25%;
bottom: 0rem;
border-top-left-radius: 1rem;
border-top-right-radius: 1rem;
}

@keyframes pan-overlay {
from {
    background-position: 0% 0%;
}

to {
    background-position: 0% -100%;
}
}

.screen-overlay {    
background: linear-gradient(
    rgb(var(--primary-rgb) / 0.15),
    rgb(var(--primary-rgb) / 0.15) 3px,
    transparent 3px,
    transparent 9px
);
background-size: 100% 9px;
height: 100%;
width: 100%;
animation: pan-overlay 22s infinite linear;
position: absolute;
z-index: 2;
left: 0px;
top: 0px;
}

@keyframes pan-image {  
0% { /* Face */
    background-position: 50% 50%;
    background-size: 100%;
}

20% {
    background-position: 50% 30%;
    background-size: 100%;
}

20.0001% { /* -- View 2 -- */
    background-position: 50% 90%;
    background-size: 500%;
    }
    
40% {
background-position: 39% 86%;
background-size: 500%;
}

40.0001% { /* -- View 3 -- */
    background-position: 80% 32%;
    background-size: 300%;
}

60% {
    background-position: 84% 23%;
    background-size: 300%;
}

60.0001% { /* -- View 4 -- */
    background-position: 0% 0%;
    background-size: 300%;
}

80% {
    background-position: 15% 6%;
    background-size: 300%;
}

80.0001% { /* -- View 5 -- */
    background-position: 80% 10%;
    background-size: 300%;
}

100% {
    background-position: 72% 14%;
    background-size: 300%;
}
}

.screen > .screen-image {
background-image: url("BG/cafe.png");
height: 100%;
width: 100%;
position: absolute;
z-index: 1;
left: 0px;
top: 0px;
background-size: 100%;
background-position: 0% 0%;

opacity: 0.6;
animation: pan-image 15s linear infinite;
}

.screen > .screen-content {
display: flex;
flex-direction: column;
align-items: center;
justify-content: flex-end;
flex-grow: 1;
gap: 4rem;
position: relative;
z-index: 3;
margin: 1rem;
padding-bottom: 6rem;
border: 1px solid rgb(var(--primary-rgb) / 50%);
border-radius: 0.6rem;
}

.screen > .screen-content > .screen-user{
display: flex;
flex-direction: column;
align-items: center;
position: relative;
}

.screen > .screen-content > .screen-user:before,
.screen > .screen-content > .screen-user:after {
content: "";
position: absolute;
top: 0px;
background-color: rgb(var(--primary-rgb));
border-radius: 1rem;
box-shadow: 0px 0px 8px 3px rgb(var(--primary-rgb) / 60%);
}

.screen > .screen-content > .screen-user:before {
height: 2px;
width: 50px;
translate: -20px -1rem;
opacity: 0.75;
}

.screen > .screen-content > .screen-user:after {
height: 3px;
width: 30px;
translate: 26px calc(-1rem - 0.5px);
}

.screen > .screen-content > .screen-user > :is(.name, .link) {
font-family: "Source Code Pro", monospace;
color: white; 
text-align: center;
text-transform: uppercase; 
}

.screen > .screen-content > .screen-user > .name {
position: relative;
font-size: 4.25rem;
}

.screen > .screen-content > .screen-user > .name:before,
.screen > .screen-content > .screen-user > .name:after {
content: "";
height: 4px;
width: 4px;
position: absolute;
border: 2px solid white;
border-radius: 2px;
}

.screen > .screen-content > .screen-user > .name:before {
top: 55%;
right: -1.5rem;
}

.screen > .screen-content > .screen-user > .name:after {
top: 45%;
left: -1.5rem;  
}

.screen > .screen-content > .screen-user > .link:is(:hover, :focus) {  
text-decoration: underline; 
}

@media(max-width: 700px) {
.screen {
    scale: 0.6;
    margin-bottom: 0rem;
}
}

/* -- Blob effect -- */

@keyframes rotate {
from {
    rotate: 0deg;
}

50% {
    scale: 1 1.5;
}

to {
    rotate: 360deg;
}
}
.last
{
    padding-top: 10%;
}

